--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Oliver's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/oliverLo78/resume/blob/main/Oliver%20Lopez%20FullStack%20Resume%202022.docx.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/oliverLo78/resume/raw/main/Oliver%20Lopez%20FullStack%20Resume%202022.docx.pdf"style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
