--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Oliver's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/oliverLo78/resume/blob/ce14512526288f9bcd219fa3c4196d138eb5c37c/OLIVER%20LOPEZ%20%20Application%20Engineer.pdf&embedded=true"style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/oliverLo78/resume/raw/main/OLIVER%20LOPEZ%20Application%20Engineer%.docx.pdf&embedded=true"style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
