restructured folders and added css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,32 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Oliver's Resume</title>
+  <meta name="author" content="Oliver">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./Assets/styles/main.css">
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/oliverLo78/resume/raw/main/OLIVER%20LOPEZ%20Application%20Engineer%.docx.pdf&embedded=true"style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<body>
+  <div id="container--main">
+    <section id="wrapper--hero" class="section--page">
+      <img src="profile-pic" alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
+
+      <div>
+        <h1>Oliver's Resume</h1>  
+        <p>Full Stack Web Developer</p>
+        <p id="email">👉oliverberto@gmail.com</p>
+    </div>
+    </section>
+
+    <section>
+      <div>
+        <a href="">LinkedIn</a>
+        <a href="">Github</a>
+        <a href="">Download Resume</a>
+      </div>
+    </section>
+
+    <section id="wrapper--about" class="section--page">
+      <h2>About Me</h2>
+      <p>Hi, I'm Oliver. I'm a full stack web developer with a background in customer service and sales. I'm passionate about creating user-friendly applications that solve real-world problems. I'm a team player who is always looking to learn and grow.</p>
+</body>
 </html>
