--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 <body>
   <div id="container--main">
     <section id="wrapper--hero" class="section--page">
-      <img src="profile-pic" alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
-
-      <div>
+      <img alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
+      <div> 
         <h1>Oliver's Resume</h1>  
         <p>Full Stack Web Developer</p>
         <p id="email">👉oliverberto@gmail.com</p>
-    </div>
+      </div>
     </section>
 
     <section>
       <div>
-        <a href="">LinkedIn</a>
-        <a href="">Github</a>
-        <a href="">Download Resume</a>
+        <a href="" target="_blank">LinkedIn</a>
+        <a href="" target="_blank">Github</a>
+        <a href="./Assets/OLIVER LOPEZ  Application Engineer.pdf" target="_blank">Download Resume</a>
       </div>
     </section>
 
