added links source to links section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
     <section>
       <div>
-        <a href="" target="_blank">LinkedIn</a>
-        <a href="" target="_blank">Github</a>
+        <a href=https://www.linkedin.com/in/oliver-lopez78/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/oliverLo78" target="_blank">Github</a>
+        <a href="https://oliverlo78.github.io/20-portfolio/" target="_blank">Portfolio</a>
         <a href="./Assets/OLIVER LOPEZ  Application Engineer.pdf" target="_blank">Download Resume</a>
       </div>
     </section>
