added tech stack section and divs for front/back stack

--- a/index.html
+++ b/index.html
@@ -30,5 +30,36 @@
     <section id="wrapper--about" class="section--page">
       <h2>About Me</h2>
       <p>Hi, I'm Oliver. I'm a full stack web developer with a background in customer service and sales. I'm passionate about creating user-friendly applications that solve real-world problems. I'm a team player who is always looking to learn and grow.</p>
+    </section>
+
+    <section>
+      <h2>Tech stack</h2>
+
+      <div id="wrapper--techstack__items">
+        <div class="card--techstack">
+          <h3>Front End</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>jQuery</li>
+            <li>React</li>
+            <li>Bootstrap</li>
+            <li>Handlebars</li>
+          </ul>
+      </div>
+      <div class="card--techstack">
+        <h3>Back End</h3>
+        <ul>
+          <li>Node.js</li>
+          <li>Express.js</li>
+          <li>MySQL</li>
+          <li>MongoDB</li>
+          <li>Sequelize</li>
+          <li>Mongoose</li>
+          <li>RESTful APIs</li>
+        </ul>
+      </div>
+    </section>
 </body>
 </html>
