added portfolio project to resume site

--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
     </section>
 
     <section>
+      <h2>Projects</h2>
+      <div id="wrapper--projects__items">
+        <h3>Portfolio</h3>
+        <div class="card--work-history">
+          <ul><strong>Frontend Developer</strong>
+            <li><i>Summary:</i> Portfolio using new React skills proficiency with Frontend developement using ReactJS frameworks to demonstrate some of my favorite projects</li>
+            <li><i>Skills:</i> Learned how to create a single-page application(SPA) using React. Created React components, manage application state, and pass data throughout my app.</li>
+            <li><i>Tools/Language:</i> React, CSS, JavaScript, NodeJs, Bootstrap, GoogleFonts</li>
+          </ul>
+          <a href="https://oliverlo78.github.io/20-portfolio/" target="_blank">20-portfolio</a>
+        </div>
+    </section>
+
+
+
+    <section>
       <h2>Tech stack</h2>
 
       <div id="wrapper--techstack__items">
