added all 3 projects to site

--- a/index.html
+++ b/index.html
@@ -45,8 +45,33 @@
           <a href="https://oliverlo78.github.io/20-portfolio/" target="_blank">20-portfolio</a>
         </div>
     </section>
-
-
+    <section>
+      <h2>Projects</h2>
+      <div id="wrapper--projects__items">
+        <h3>Rose-to-Rough</h3>
+        <div class="card--work-history">
+          <ul><strong>Backend Developer</strong>
+            <li><i>Summary:</i> Rose to Rought is a wine review application users can see posts of many options and a variety of wines.  Allows users to signup/login and leave a review of their favorite wine.</li>
+            <li><i>Skills:</i> Experience using REST APIs, and MVC folder structure for creating applications. Knowledge working with MySQL and the Sequelize ORM relational database</li>
+            <li><i>Tools/Language:</i>JavaScript, Handlebars.js, CSS, Node.js, Express</li>
+          </ul>
+          <a href="https://github.com/harrj396/Rose-to-Rough" target="_blank">Github Link</a>
+          <a href="https://rose-to-rough.herokuapp.com/">Deployed Link</a>
+        </div>
+    </section>
+    <h2>Projects</h2>
+    <div id="wrapper--projects__items">
+      <h3>Jubilee</h3>
+      <div class="card--work-history">
+        <ul><strong>Backtend Developer</strong>
+          <li><i>Summary:</i> Software developement experience with more than one languages, Developed JavaScript vinyl app where users can create playlist from spotify API</li>
+          <li><i>Skills:</i> Managed database and server side, partnered with Agile team to establish a scalable, efficient,m user-focused MERN application.</li>
+          <li><i>Tools/Language:</i> React, GraphQL, SQL queries, Spotify, Node.js, MongoDB, JavaScript</li>
+        </ul>
+        <a href="https://github.com/harrj396/Jubilee">Github Link</a>
+        <a href="https://jubilee.herokuapp.com/" target="_blank">Deployed Link</a>
+      </div>
+  </section>
 
     <section>
       <h2>Tech stack</h2>
