added hero-video and header to website design business page

--- a/index.html
+++ b/index.html
@@ -8,19 +8,32 @@
   <link rel="stylesheet" href="./Assets/styles/main.css">
 </head>
 <body>
+  <header class="hero-block text-center">
+    <div class="hero-text-container">
+      <h1>Offering professional web development services</h1>
+      <h2>to help your business succeed</h2>
+    </div>
+    <div class="hero-bg-media">
+        <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video" disablepictureinpicture preload="auto">  
+        <source src="assets/videos/hero-video.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="bg-overlay"></div>
+  </header>
   <div id="container--main">
     <section id="wrapper--hero" class="section--page">
       <img alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
       <div> 
-        <h1>Oliver's Resume</h1>  
-        <p>Full Stack Web Developer</p>
+        <h1>Welcome to Oliver Lopez Website Design</h1>  
+        <p>Offering professional web development services to help your business succeed</p> 
+        <p><a href="/hero-video.html">Hero block with background video</a></p> 
         <p id="email">👉oliverberto@gmail.com</p>
       </div>
     </section>
 
     <section>
       <div>
-        <a href=https://www.linkedin.com/in/oliver-lopez78/" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/oliver-lopez78/" target="_blank">LinkedIn</a>
         <a href="https://github.com/oliverLo78" target="_blank">Github</a>
         <a href="https://oliverlo78.github.io/20-portfolio/" target="_blank">Portfolio</a>
         <a href="./Assets/OLIVER LOPEZ  Application Engineer.pdf" target="_blank">Download Resume</a>
