--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>to help your business succeed</h2>
     </div>
     <div class="hero-bg-media">
-        <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video" disablepictureinpicture preload="auto">  
+        <video loop playsinline muted autoplay poster="assets/videos/hero-video.mp4" class="background-video">  
         <source src="assets/videos/hero-video.mp4" type="video/mp4">
         </video>
     </div>
