added services and blog sections

--- a/index.html
+++ b/index.html
@@ -1,118 +1,150 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Oliver's Resume</title>
-  <meta name="author" content="Oliver">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./Assets/styles/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Oliver's Web Development Services</title>
+    <meta name="description" content="Offering professional web development services to help your business succeed">
+    <meta name="author" content="Oliver">
+    <link rel="stylesheet" href="/Assets/styles/main.css">
+    <link rel="preload" as="image" href="/Assets/videos/hero-still.png">
 </head>
+
 <body>
-  <header class="hero-block text-center">
-    <div class="hero-text-container">
-      <h1>Offering professional web development services</h1>
-      <h2>to help your business succeed</h2>
-    </div>
-    <div class="hero-bg-media">
-        <video loop playsinline muted autoplay poster="assets/videos/hero-video.mp4" class="background-video">  
-        <source src="assets/videos/hero-video.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div class="bg-overlay"></div>
-  </header>
-  <div id="container--main">
-    <section id="wrapper--hero" class="section--page">
-      <img alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
-      <div> 
-        <h1>Welcome to Oliver Lopez Website Design</h1>  
-        <p>Offering professional web development services to help your business succeed</p> 
-        <p><a href="/hero-video.html">Hero block with background video</a></p> 
-        <p id="email">👉oliverberto@gmail.com</p>
-      </div>
-    </section>
-
-    <section>
-      <div>
-        <a href="https://www.linkedin.com/in/oliver-lopez78/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/oliverLo78" target="_blank">Github</a>
-        <a href="https://oliverlo78.github.io/20-portfolio/" target="_blank">Portfolio</a>
-        <a href="./Assets/OLIVER LOPEZ  Application Engineer.pdf" target="_blank">Download Resume</a>
-      </div>
-    </section>
-
-    <section id="wrapper--about" class="section--page">
-      <h2>About Me</h2>
-      <p>Hi, I'm Oliver. I'm a full stack web developer with a background in customer service and sales. I'm passionate about creating user-friendly applications that solve real-world problems. I'm a team player who is always looking to learn and grow.</p>
-    </section>
-
-    <section>
-      <h2>Projects</h2>
-      <div id="wrapper--projects__items">
-        <h3>Portfolio</h3>
-        <div class="card--work-history">
-          <ul><strong>Frontend Developer</strong>
-            <li><i>Summary:</i> Portfolio using new React skills proficiency with Frontend developement using ReactJS frameworks to demonstrate some of my favorite projects</li>
-            <li><i>Skills:</i> Learned how to create a single-page application(SPA) using React. Created React components, manage application state, and pass data throughout my app.</li>
-            <li><i>Tools/Language:</i> React, CSS, JavaScript, NodeJs, Bootstrap, GoogleFonts</li>
-          </ul>
-          <a href="https://oliverlo78.github.io/20-portfolio/" target="_blank">20-portfolio</a>
+    <header>
+        <div class="hero-block text-center">
+            <div class="hero-text-container">
+                <h1 class="slide-in-top">Oliver's Web Development Services</h1>
+                <h2 class="slide-in-left">Offering professional web development services to help your business succeed</h2>
+            </div>
+            <div class="hero-bg-media">
+                <video loop playsinline muted autoplay poster="Assets/videos/hero-still.png" class="background-video">
+                    <source src="Assets/videos/hero-video.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="bg-overlay"></div>
         </div>
-    </section>
-    <section>
-      
-      <div id="wrapper--projects__items">
-        <h3>Rose-to-Rough</h3>
-        <div class="card--work-history">
-          <ul><strong>Backend Developer</strong>
-            <li><i>Summary:</i> Rose to Rought is a wine review application users can see posts of many options and a variety of wines.  Allows users to signup/login and leave a review of their favorite wine.</li>
-            <li><i>Skills:</i> Experience using REST APIs, and MVC folder structure for creating applications. Knowledge working with MySQL and the Sequelize ORM relational database</li>
-            <li><i>Tools/Language:</i>JavaScript, Handlebars.js, CSS, Node.js, Express</li>
-          </ul>
-          <a href="https://github.com/harrj396/Rose-to-Rough" target="_blank">Github Link</a>
-          <a href="https://rose-to-rough.herokuapp.com/">Deployed Link</a>
+    </header>
+
+    <main>
+      <section id="wrapper--hero" class="section--page">
+        <img alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
+        <div> 
+          <h1>Welcome to Oliver Lopez Web Development</h1>  
+          <p>Offering professional web development services to help your business succeed</p> 
+          <p id="email">👉oliverberto@gmail.com</p>
         </div>
-    </section>
-    <div id="wrapper--projects__items">
-      <h3>Jubilee</h3>
-      <div class="card--work-history">
-        <ul><strong>Backtend Developer</strong>
-          <li><i>Summary:</i> Software developement experience with more than one languages, Developed JavaScript vinyl app where users can create playlist from spotify API</li>
-          <li><i>Skills:</i> Managed database and server side, partnered with Agile team to establish a scalable, efficient,m user-focused MERN application.</li>
-          <li><i>Tools/Language:</i> React, GraphQL, SQL queries, Spotify, Node.js, MongoDB, JavaScript</li>
-        </ul>
-        <a href="https://github.com/harrj396/Jubilee">Github Link</a>
-        <a href="https://jubilee.herokuapp.com/" target="_blank">Deployed Link</a>
-      </div>
-  </section>
+      </section>  
+      <section id="about" class="section--page">
+            <h2>About Me</h2>
+            <p>Hi, I'm Oliver. I'm a full stack web developer with a background in customer service and sales. I'm passionate about creating user-friendly applications that solve real-world problems. I'm a team player who is always looking to learn and grow.</p>
+      </section>
 
-    <section>
-      <h2>Tech stack</h2>
-
-      <div id="wrapper--techstack__items">
-        <div class="card--techstack">
-          <h3>Front End</h3>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>React</li>
-            <li>Bootstrap</li>
-            <li>Handlebars</li>
-          </ul>
-      </div>
-      <div class="card--techstack">
-        <h3>Back End</h3>
+      <section>
+        <h2>Services</h2>
+        <p>Here are some of the services I offer:</p>
         <ul>
-          <li>Node.js</li>
-          <li>Express.js</li>
-          <li>MySQL</li>
-          <li>MongoDB</li>
-          <li>Sequelize</li>
-          <li>Mongoose</li>
-          <li>RESTful APIs</li>
+          <li>Website Design</li>
+          <li>Website Development</li>
+          <li>Website Optimization</li>
+          <li>Website Maintenance</li>
         </ul>
-      </div>
-    </section>
-</body>
-</html>
+      </section>
+  
+      <section>
+        <h2>Blog</h2>
+        <p>Check out my latest blog posts on launching, growing, and monetizing your business:</p>
+        <ul>
+          <li><a href="#">Post 1 Title</a></li>
+          <li><a href="#">Post 2 Title</a></li>
+          <li><a href="#">Post 3 Title</a></li>
+        </ul>
+      </section>
+  
+      <section>
+        <h2>Social Proof</h2>
+        <p>What clients say about my services:</p>
+        <blockquote>
+          "Oliver did an amazing job creating our website. His attention to detail and expertise really made a difference." - Client Name
+        </blockquote>
+        <blockquote>
+          "Working with Oliver was a breeze. He was responsive, professional, and delivered exactly what we needed." - Another Client Name
+        </blockquote>
+      </section>
+
+      <section id="projects" class="section--page">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Portfolio</h3>
+                <div class="project-details">
+                    <p><strong>Frontend Developer</strong></p>
+                    <ul>
+                        <li><i>Summary:</i> Portfolio using new React skills proficiency with Frontend development using ReactJS frameworks to demonstrate some of my favorite projects</li>
+                        <li><i>Skills:</i> Learned how to create a single-page application (SPA) using React. Created React components, manage application state, and pass data throughout my app.</li>
+                        <li><i>Tools/Language:</i> React, CSS, JavaScript, NodeJs, Bootstrap, GoogleFonts</li>
+                    </ul>
+                    <a href="https://oliverlo78.github.io/20-portfolio/" target="_blank">View Portfolio</a>
+                </div>
+            </div>
+
+            <div class="project">
+                <h3>Rose-to-Rough</h3>
+                <div class="project-details">
+                    <p><strong>Backend Developer</strong></p>
+                    <ul>
+                        <li><i>Summary:</i> Rose to Rough is a wine review application users can see posts of many options and a variety of wines. Allows users to signup/login and leave a review of their favorite wine.</li>
+                        <li><i>Skills:</i> Experience using REST APIs, and MVC folder structure for creating applications. Knowledge working with MySQL and the Sequelize ORM relational database</li>
+                        <li><i>Tools/Language:</i> JavaScript, Handlebars.js, CSS, Node.js, Express</li>
+                    </ul>
+                    <a href="https://github.com/harrj396/Rose-to-Rough" target="_blank">View on GitHub</a>
+                    <a href="https://rose-to-rough.herokuapp.com/">Deployed Link</a>
+                </div>
+            </div>
+
+            <div class="project">
+                <h3>Jubilee</h3>
+                <div class="project-details">
+                    <p><strong>Backend Developer</strong></p>
+                    <ul>
+                        <li><i>Summary:</i> Software development experience with more than one language, Developed JavaScript vinyl app where users can create a playlist from Spotify API</li>
+                        <li><i>Skills:</i> Managed database and server-side, partnered with Agile team to establish a scalable, efficient, user-focused MERN application.</li>
+                        <li><i>Tools/Language:</i> React, GraphQL, SQL queries, Spotify, Node.js, MongoDB, JavaScript</li>
+                    </ul>
+                    <a href="https://github.com/harrj396/Jubilee" target="_blank">View on GitHub</a>
+                    <a href="https://jubilee.herokuapp.com/" target="_blank">Deployed Link</a>
+                </div>
+            </div>
+      </section>
+
+      <section id="tech-stack" class="section--page">
+            <h2>Tech Stack</h2>
+            <div class="tech-stack">
+                <div class="front-end">
+                    <h3>Front End</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>React</li>
+                        <li>Bootstrap</li>
+                        <li>Handlebars</li>
+                    </ul>
+                </div>
+      </section>
+      <section id="tech-stack" class="section--page">
+                <div class="tech-stack">
+                  <div class id="back-end">
+                    <h3>Back End</h3>
+                    <ul>
+                        <li>Node.js</li>
+                        <li>Express</li>
+                        <li>MySQL</li>
+                        <li>Sequelize</li>
+                        <li>MongoDB</li>
+                        <li>Mongoose</li>
+                        <li>GraphQL</li>
+                    </ul>
+                  </div>
+      </section>
