added css to header h1 and deleted hero-video.css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oliver's Web Development Services</title>
+    <title>Oliver's Website Services</title>
     <meta name="description" content="Offering professional web development services to help your business succeed">
     <meta name="author" content="Oliver">
     <link rel="stylesheet" href="/Assets/styles/main.css">
@@ -13,20 +13,19 @@
 
 <body>
     <header>
-        <div class="hero-block text-center">
-            <div class="hero-text-container">
-                <h1 class="slide-in-top">Oliver's Web Development Services</h1>
-                <h2 class="slide-in-left">Offering professional web development services to help your business succeed</h2>
-            </div>
+      <div class="hero-block text-center">
+        <div class="hero-text-container">
+          <h1 class="slide-in-right">Oliver's Web Development Services</h1>
+          <h2 class="slide-in-left">Offering professional web development services to help your business succeed</h2>
+        </div>
             <div class="hero-bg-media">
                 <video loop playsinline muted autoplay poster="Assets/videos/hero-still.png" class="background-video">
                     <source src="Assets/videos/hero-video.mp4" type="video/mp4">
-                </video>
+                  </video>
             </div>
-            <div class="bg-overlay"></div>
         </div>
     </header>
-
+    
     <main>
       <section id="wrapper--hero" class="section--page">
         <img alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
@@ -148,3 +147,10 @@
                     </ul>
                   </div>
       </section>
+</main>
+    <footer>
+        <p>&copy; 2024 Oliver Lopez Web Development</p>
+    </footer>
+    <script src="/Assets/scripts/main.js"></script>
+</body>
+</html>
