css not working

--- a/index.html
+++ b/index.html
@@ -151,6 +151,6 @@
     <footer>
         <p>&copy; 2024 Oliver Lopez Web Development</p>
     </footer>
-    <script src="/Assets/scripts/main.js"></script>
+    <script src=""></script>
 </body>
 </html>
