used lowercase in the href changed from Assets to assets

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Oliver's Website Services</title>
     <meta name="description" content="Offering professional web development services to help your business succeed">
     <meta name="author" content="Oliver">
-    <link rel="stylesheet" href="/Assets/styles/main.css">
+    <link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 
 <body>
