--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <main>
       <section id="wrapper--hero" class="section--page">
-        <img alt="image of oliver" src="./Assets/images/Oliver - profile-pic.jpg">
+        <img alt="imageofoliver" src="./Assets/images/Oliver-profile-pic.jpg">
         <div> 
           <h1>Welcome to Oliver Lopez Web Development</h1>  
           <p>Offering professional web development services to help your business succeed</p> 
@@ -52,7 +52,7 @@
   
       <section>
         <h2>Blog</h2>
-        <p>Check out my latest blog posts on launching, growing, and monetizing your business:</p>
+        <p>Check out these blog posts on launching, growing, and monetizing your business:</p>
         <ul>
           <li><a href="#">Post 1 Title</a></li>
           <li><a href="#">Post 2 Title</a></li>
@@ -130,6 +130,7 @@
                         <li>Handlebars</li>
                     </ul>
                 </div>
+            </div>
       </section>
       <section id="tech-stack" class="section--page">
                 <div class="tech-stack">
@@ -145,11 +146,12 @@
                         <li>GraphQL</li>
                     </ul>
                   </div>
+                </div>
       </section>
 </main>
     <footer>
         <p>&copy; 2024 Oliver Lopez Web Development</p>
     </footer>
-    <script src=""></script>
+    <script></script>
 </body>
 </html>
